# fresh-baked

./: .travis.yml  LICENSE  README.md  README.rst  cookiecutter.json  setup.cfg  test-script.py  tox.ini
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test-script.py
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  requirements.txt
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_main.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py  main.py  {{cookiecutter.project_slug}}.py
