[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>",
]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"
homepage = "{{ cookiecutter.homepage }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}"
documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.org/en/latest/"
keywords = []
classifiers = [
    # "License :: OSI Approved :: {{ cookiecutter.open_source_license }}",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.cli:cli'

# Requirements
[tool.poetry.dependencies]
python = "^3.6"
typing = "^3.6"
click = "^6.7"

[tool.poetry.dev-dependencies]
pytest = "~3.4"
pytest-cov = "~2.5"
tox = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-apidoc = "*"
# black only works on python 3.6+, still in alpha, but it's good
black = { version = "^18.3-alpha.0", python = "^3.6" }
yapf = "*"
flake8 = "*"
isort = "*"
bandit = "*"
mypy = { version = "*", optional = true }

[tool.poetry.extras]
mypy = ["mypy"]

[tool.black]
line-length = 120
skip-string-normalization = true
