[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>",
]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"
homepage = "{{ cookiecutter.homepage }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}"
documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.org/en/latest/"
keywords = []
classifiers = [
    # "License :: OSI Approved :: {{ cookiecutter.open_source_license }}",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.cli:cli'

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
typing = "^3.7"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
tox = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx_rtd_theme = "*"
sphinxcontrib-apidoc = "*"
# black only works on python 3.6+
black = { version = "*", python = "^3.6" }
flake8 = "*"
isort = "*"
bandit = "*"
mypy = { version = "*", optional = true }

[tool.poetry.extras]
mypy = ["mypy"]

[tool.black]
line-length = 120
