[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>",
]
license = "{{ cookiecutter.open_source_license }}"
readme = "README.md"
homepage = "{{ cookiecutter.homepage }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository_name }}"
documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.org/en/latest/"
keywords = []
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.cli:cli'

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
typing = "^3.7"
click = "^7.1"
# readthedocs requires sphinx optional deps here since dev-deps don't work with extras
Sphinx = {version = "*", optional = true}
sphinx-autobuild = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
sphinxcontrib-apidoc = {version = "*", optional = true}
sphinx-autodoc-typehints = {version = "*", optional = true}
recommonmark = {version = "*", optional = true}
toml = {version = "*", optional = true}
sphinx-click = {version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
tox = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-apidoc = "*"
sphinx-autodoc-typehints = "*"
black = { version = "^21.4b0", python = "^3.6" }
flake8 = "*"
isort = "*"
bandit = "*"
mypy = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-apidoc = "*"
sphinx-autodoc-typehints = "*"
recommonmark = "*"
toml = "*"
sphinx-click = "*"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme",
    "sphinxcontrib-apidoc",
    "sphinx-autodoc-typehints",
    "recommonmark",
    "toml",
    "sphinx-click",
]

[tool.black]
line-length = 120
